--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-/** linguist-documentation=false
-/** linguist-vendored=false
+ENM_workflow/** linguist-documentation=false
+ENM_workflow/** linguist-vendored=false
