--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-ENM_workflow/** linguist-documentation=false
-ENM_workflow/** linguist-vendored=false
+/** linguist-documentation=false
+/** linguist-vendored=false
